# instrument-control

./: .gitignore  COPYING  DESCRIPTION  INDEX  Makefile  NEWS  README.md  _config.yml  octave-instrument-control.metainfo.xml
devel/: testbinblock.m  testi2c.m  testmulticast.m  testserial.m  testserialport.m  testspi.m  testtcp.m  testtcpclient.m  testudp.m  testudpport.m
doc/: instrument-control.texi  mkqhcp.py
inst/: __instrument_control__.m  __load_instrument_control__.m  __unload_instrument_control__.m  clrdevice.m  flushinput.m  flushoutput.m  instrhelp.m  instrhwinfo.m  readbinblock.m  readline.m  seriallist.m  serialportlist.m  spoll.m  tcpclient.m  tcpip.m  trigger.m  udp_demo.m  writebinblock.m  writeline.m  writeread.m
inst/@octave_gpib/: fclose.m  fopen.m  fprintf.m  fread.m  fscanf.m  fwrite.m
inst/@octave_i2c/: fclose.m  fopen.m  fread.m  fwrite.m  get.m  set.m
inst/@octave_modbus/: get.m  read.m  set.m
inst/@octave_parallel/: fclose.m  fopen.m  fread.m  fwrite.m
inst/@octave_serial/: fclose.m  fopen.m  fprintf.m  fread.m  fwrite.m  get.m  serialbreak.m  set.m  srl_baudrate.m  srl_bytesize.m  srl_flush.m  srl_parity.m  srl_stopbits.m  srl_timeout.m
inst/@octave_serialport/: configureTerminator.m  fprintf.m  fread.m  fwrite.m  get.m  getpinstatus.m  read.m  serialbreak.m  set.m  write.m
inst/@octave_spi/: fclose.m  fopen.m  fread.m  fwrite.m  get.m  read.m  set.m  write.m  writeAndRead.m
inst/@octave_tcp/: fclose.m  flush.m  fopen.m  fprintf.m  fread.m  fwrite.m  get.m  read.m  set.m  write.m
inst/@octave_tcpclient/: configureTerminator.m  get.m  read.m  set.m  write.m
inst/@octave_tcpserver/: configureTerminator.m  get.m  read.m  set.m  write.m
inst/@octave_udp/: fclose.m  flush.m  fopen.m  fprintf.m  fread.m  fwrite.m  get.m  read.m  set.m  write.m
inst/@octave_udpport/: configureMulticast.m  configureTerminator.m  fprintf.m  fread.m  fwrite.m  get.m  read.m  set.m  write.m  writeline.m
inst/@octave_usbtmc/: fclose.m  fopen.m  fread.m  fwrite.m
inst/@octave_visadev/: configureTerminator.m  flush.m  getpinstatus.m  properties.m  read.m  setDTR.m  setRTS.m  visastatus.m  visatrigger.m  write.m
inst/@octave_vxi11/: fclose.m  fopen.m  fread.m  fwrite.m
instrument-control/: functions.md  index.md  manual.md  news.md
instrument-control/functions/: clrdevice.md  flushinput.md  flushoutput.md  gpib.md  gpib_close.md  gpib_read.md  gpib_timeout.md  gpib_write.md  i2c.md  i2c_addr.md  i2c_close.md  i2c_read.md  i2c_write.md  instrhelp.md  instrhwinfo.md  modbus.md  parallel.md  pp_close.md  pp_ctrl.md  pp_data.md  pp_datadir.md  pp_stat.md  readbinblock.md  readline.md  resolvehost.md  serial.md  seriallist.md  serialport.md  serialportlist.md  spi.md  spi_close.md  spi_read.md  spi_write.md  spi_writeAndRead.md  spoll.md  srl_read.md  srl_write.md  tcp.md  tcp_close.md  tcp_read.md  (+26 more)
instrument-control/functions/@octave_gpib/: fclose.md  fopen.md  fprintf.md  fread.md  fscanf.md  fwrite.md
instrument-control/functions/@octave_i2c/: fclose.md  fopen.md  fread.md  fwrite.md  get.md  set.md
src/: Makefile.in  bootstrap  common.mk.in  config.h.in  configure.ac  octave-wrappers.h.in
src/gpib/: Makefile.in  __gpib_clrdevice__.cc  __gpib_pkg_lock__.cc  __gpib_spoll__.cc  __gpib_trigger__.cc  gpib.cc  gpib_class.cc  gpib_class.h  gpib_close.cc  gpib_read.cc  gpib_timeout.cc  gpib_write.cc
src/hwinfo/: Makefile.in  __instr_hwinfo__.cc
src/i2c/: Makefile.in  __i2c_pkg_lock__.cc  __i2c_properties__.cc  i2c.cc  i2c_addr.cc  i2c_class.cc  i2c_class.h  i2c_close.cc  i2c_read.cc  i2c_write.cc
src/m4/: octave-forge.m4
src/modbus/: Makefile.in  __modbus_pkg_lock__.cc  __modbus_properties__.cc  __modbus_read__.cc  __modbus_write__.cc  __modbus_write_read__.cc  modbus.cc  modbus_class.cc  modbus_class.h
src/parallel/: Makefile.in  __parallel_pkg_lock__.cc  parallel.cc  parallel_class.cc  parallel_class.h  pp_close.cc  pp_ctrl.cc  pp_data.cc  pp_datadir.cc  pp_stat.cc
src/resolvehost/: Makefile.in  resolvehost.cc
src/serial/: Makefile.in  __serial_pkg_lock__.cc  __srl_properties__.cc  serial.cc  serial_class.cc  serial_class.h  serial_class_lin.cc  serial_class_lin.h  serial_class_win32.cc  serial_class_win32.h  srl_read.cc  srl_write.cc
src/serialport/: Makefile.in  __serialport_pkg_lock__.cc  __srlp_properties__.cc  __srlp_read__.cc  __srlp_write__.cc  serialport.cc  serialport_class.cc  serialport_class.h  serialport_class_lin.cc  serialport_class_lin.h  serialport_class_win32.cc  serialport_class_win32.h
src/spi/: Makefile.in  __spi_pkg_lock__.cc  __spi_properties__.cc  spi.cc  spi_class.cc  spi_class.h  spi_close.cc  spi_read.cc  spi_write.cc  spi_writeAndRead.cc
src/tcp/: Makefile.in  __tcp_pkg_lock__.cc  __tcp_properties__.cc  tcp.cc  tcp_class.cc  tcp_class.h  tcp_close.cc  tcp_read.cc  tcp_timeout.cc  tcp_write.cc
src/tcpclient/: Makefile.in  __tcpclient_pkg_lock__.cc  __tcpclient_properties__.cc  __tcpclient_read__.cc  __tcpclient_write__.cc  tcpclient.cc  tcpclient_class.cc  tcpclient_class.h  tcpclient_read.cc  tcpclient_write.cc
src/tcpserver/: Makefile.in  __tcpserver_pkg_lock__.cc  __tcpserver_properties__.cc  __tcpserver_read__.cc  __tcpserver_write__.cc  tcpserver.cc  tcpserver_class.cc  tcpserver_class.h
src/udp/: Makefile.in  __udp_pkg_lock__.cc  __udp_properties__.cc  udp.cc  udp_class.cc  udp_class.h  udp_close.cc  udp_read.cc  udp_timeout.cc  udp_write.cc
src/udpport/: Makefile.in  __udpport_pkg_lock__.cc  __udpport_properties__.cc  __udpport_read__.cc  __udpport_write__.cc  udpport.cc  udpport_class.cc  udpport_class.h  udpport_read.cc  udpport_write.cc
src/usbtmc/: Makefile.in  __usbtmc_pkg_lock__.cc  usbtmc.cc  usbtmc_class.cc  usbtmc_class.h  usbtmc_close.cc  usbtmc_read.cc  usbtmc_write.cc
src/visadev/: Makefile.in  __visadev_dispatch__.cc  __visadev_pkg_lock__.cc  visa_library.cc  visa_library.h  visadev.cc  visadev_class.cc  visadev_class.h  visadevlist.cc
src/vxi11/: Makefile.in  __vxi11_pkg_lock__.cc  vxi11.cc  vxi11_class.cc  vxi11_class.h  vxi11_close.cc  vxi11_read.cc  vxi11_write.cc
(+113 files in other folders)
